k8s/backend-manifest/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   namespace: three-tier 
   name: postgress
spec:
   replicas: 1
   selector:
     matchLabels: 
       app: postgres
    template: 
      metadata:
        labels:
           app: postgres
      spec:
         containers: 
          - name: postgres
            image: postgres:latest
            ports:
            - containerPort: 5432
           volumeMounts:
             - name: postgres-volume
               mountPath: var/lib/postgres/data
           volumes:
           - name: postgres-volume
             persistentVolumeClaim:
               ClaimName: postgres-volume-claim
