k8s/backend-manifest/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: backend-ingress
   namespace: three-tier
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP" : 80}]'
spec:
   ingressClassName: alb
   rules:
     - host: api.dovz.shop
       http:
         paths:
         -  path: /api
            pathtype: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
